// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch demo -- checked 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #4683e6;
}

.c0 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c0 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c0 .c8 {
  background: #9fecc0;
}

.c0 .c5 {
  display: none;
}

.c10 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c10:hover {
  border-color: #4683e6;
}

.c10 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- disabled 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c11 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c11 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c11 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c11 .c8 {
  background: #9fecc0;
}

.c11 .c5 {
  display: none;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #4683e6;
}

.c0 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c3 {
  display: none;
}

.c10 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
  border-color: #d9d9d9;
  cursor: not-allowed;
  pointer-events: none;
}

.c10:hover {
  border-color: #4683e6;
}

.c10 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

.c10 .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c10 .c8 {
  background-color: #f7f7f7;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10"
      disabled=""
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- onTextAndOffText 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c10 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c10 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c10 .c8 {
  background: #9fecc0;
}

.c10 .c5 {
  display: none;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #4683e6;
}

.c0 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c3 {
  display: none;
}

.c11 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c11 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c11 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c3 {
  display: none;
}

.c11 .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c11 .c8 {
  background-color: #f7f7f7;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          开
        </span>
        <span
          class="c5 c4"
        >
          关
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- size 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c12 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c12 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c3,
.c12 .c5 {
  line-height: 16px;
}

.c12 .c3 {
  padding-right: 20px;
}

.c12 .c5 {
  padding-left: 20px;
}

.c12 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c12 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c12 .c8 {
  background: #9fecc0;
}

.c12 .c5 {
  display: none;
}

.c10 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c10:hover {
  border-color: #4683e6;
}

.c10 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

.c13 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c3,
.c13 .c5 {
  line-height: 16px;
}

.c13 .c3 {
  padding-right: 20px;
}

.c13 .c5 {
  padding-left: 20px;
}

.c13 .c3 {
  display: none;
}

.c13 .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c13 .c8 {
  background-color: #f7f7f7;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 22px;
  width: 45px;
  padding: 1px;
  border: 1px solid #c3cad9;
  border-width: 0;
}

.c0:hover {
  border-color: #4683e6;
}

.c0 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 22px;
  height: 22px;
}

.c0 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 12px;
}

.c0 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c0 .c3,
.c0 .c5 {
  display: none;
}

.c0 .c3 {
  display: none;
}

.c11 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 34px;
  width: 100px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 22px;
}

.c11:hover {
  border-color: #4683e6;
}

.c11 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 26px;
  height: 26px;
}

.c11 .c8 {
  background-color: #e69b9b;
  left: 18px;
  height: 16px;
}

.c11 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c11 .c3 {
  padding-right: 26px;
}

.c11 .c5 {
  padding-left: 26px;
}

.c11 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c10"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c11"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- switch 1`] = `
.c15 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c23:hover {
  border-color: #4683e6;
}

.c23 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c23 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c23 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c23 .c16,
.c23 .c18 {
  line-height: 16px;
}

.c23 .c16 {
  padding-right: 20px;
}

.c23 .c18 {
  padding-left: 20px;
}

.c23 .c14 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c23 .c19 {
  left: 100%;
  margin-left: -19px;
}

.c23 .c21 {
  background: #9fecc0;
}

.c23 .c18 {
  display: none;
}

.c13 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c13:hover {
  border-color: #4683e6;
}

.c13 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c16,
.c13 .c18 {
  line-height: 16px;
}

.c13 .c16 {
  padding-right: 20px;
}

.c13 .c18 {
  padding-left: 20px;
}

.c13 .c16 {
  display: none;
}

.c25 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c25 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c25 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c25 .c16,
.c25 .c18 {
  line-height: 16px;
}

.c25 .c16 {
  padding-right: 20px;
}

.c25 .c18 {
  padding-left: 20px;
}

.c25 .c16 {
  display: none;
}

.c25 .c14 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c25 .c21 {
  background-color: #f7f7f7;
}

.c26 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 22px;
  height: 22px;
}

.c26 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 12px;
}

.c26 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c26 .c16,
.c26 .c18 {
  display: none;
}

.c26 .c16 {
  display: none;
}

.c27 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 26px;
  height: 26px;
}

.c27 .c21 {
  background-color: #e69b9b;
  left: 18px;
  height: 16px;
}

.c27 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c27 .c16 {
  padding-right: 26px;
}

.c27 .c18 {
  padding-left: 26px;
}

.c27 .c16 {
  display: none;
}

.c11 {
  vertical-align: baseline;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 .c9 {
  color: #3555f6;
}

.c6 {
  position: relative;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c29+.c29 {
  margin-left: -1px;
}

.c6 .c28 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c28:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c28:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c24 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  color: #6b798e;
}

.c24 input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  padding: 4px 8px;
  margin: 0;
  border-radius: 2px;
  font-size: inherit;
  outline: none;
  color: inherit;
}

.c24 input {
  border: 1px solid #dfe0f1;
  background: #fafafc;
  height: 28px;
  box-shadow: inset 0 1px 3px 0 #dedeef,inset 0 0px 2px 0 #f6f6fb;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c24 input:hover {
  border-color: #c3cad9;
  background-color: #f6f6fb;
}

.c24 input:focus {
  border-color: #4683e6;
  background-color: #f6f6fb;
}

.c24 input:disabled,
.c24 input[disabled] {
  box-shadow: none;
}

.c24 input::-webkit-input-placeholder {
  color: #abb4c3;
}

.c24 input::-moz-placeholder {
  color: #abb4c3;
}

.c24 input:-ms-input-placeholder {
  color: #abb4c3;
}

.c24 input::placeholder {
  color: #abb4c3;
}

.c24 .c30 {
  width: 28px;
  height: 28px;
  line-height: 28px;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        checked
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          checked=""
          class="c23"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        onText
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <span
          class="uc-fe-input c24"
        >
          <input
            value="ON"
          />
        </span>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        offText
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <span
          class="uc-fe-input c24"
        >
          <input
            value="OFF"
          />
        </span>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c23"
    >
      <div
        class="c14 c15"
      >
        <span
          class="c16 c17"
        >
          ON
        </span>
        <span
          class="c18 c17"
        >
          OFF
        </span>
        <span
          class="c19 c20"
        >
          <span
            class="c21 c22"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Switch demo -- uncontrolled 1`] = `
.c2 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c4 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c7 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c9 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c0:hover {
  border-color: #4683e6;
}

.c0 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c0 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c0 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c0 .c3,
.c0 .c5 {
  line-height: 16px;
}

.c0 .c3 {
  padding-right: 20px;
}

.c0 .c5 {
  padding-left: 20px;
}

.c0 .c1 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c0 .c6 {
  left: 100%;
  margin-left: -19px;
}

.c0 .c8 {
  background: #9fecc0;
}

.c0 .c5 {
  display: none;
}

.c10 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c10 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c10 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c10 .c3,
.c10 .c5 {
  line-height: 16px;
}

.c10 .c3 {
  padding-right: 20px;
}

.c10 .c5 {
  padding-left: 20px;
}

.c10 .c3 {
  display: none;
}

.c11 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c11 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c11 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c11 .c3,
.c11 .c5 {
  line-height: 16px;
}

.c11 .c3 {
  padding-right: 20px;
}

.c11 .c5 {
  padding-left: 20px;
}

.c11 .c3 {
  display: none;
}

.c11 .c1 {
  border-color: #f7f7f7;
  background-color: #f7f7f7;
}

.c11 .c8 {
  background-color: #f7f7f7;
}

.c12 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 22px;
  height: 22px;
}

.c12 .c8 {
  background-color: #e69b9b;
  left: 13px;
  height: 12px;
}

.c12 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c12 .c3,
.c12 .c5 {
  display: none;
}

.c12 .c3 {
  display: none;
}

.c13 .c6 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 26px;
  height: 26px;
}

.c13 .c8 {
  background-color: #e69b9b;
  left: 18px;
  height: 16px;
}

.c13 .c1 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c3 {
  padding-right: 26px;
}

.c13 .c5 {
  padding-left: 26px;
}

.c13 .c3 {
  display: none;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      checked=""
      class="c0"
    >
      <div
        class="c1 c2"
      >
        <span
          class="c3 c4"
        >
          ON
        </span>
        <span
          class="c5 c4"
        >
          OFF
        </span>
        <span
          class="c6 c7"
        >
          <span
            class="c8 c9"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;
